--- a/AdvancedProgramming2024.Domain.csproj
+++ b/AdvancedProgramming2024.Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\Abstract\" />
+    <Folder Include="Domain\Utilities\" />
+  </ItemGroup>
+
 </Project>
